Revert "Delete a repeated list item in the timeline"
This reverts commit 9019cfc1290d00d74c1ffc3cace9270b3e407a75.

--- a/Responsive Web Design/test2-tribute-page/index.html
+++ b/Responsive Web Design/test2-tribute-page/index.html
@@ -70,6 +70,10 @@
                     - He is sentenced to life. Arrives on Robben Island
                 </li>
                 <li>
+                    <strong>1964</strong>
+                    - He is sentenced to life. Arrives on Robben Island
+                </li>
+                <li>
                     <strong>1990</strong>
                     - ANC is unbanned. Released after 27 years in prison. Elected ANC Deputy President
                 </li>
