--- a/Responsive Web Design/p10-3_intermediate-css-picasso/index.html
+++ b/Responsive Web Design/p10-3_intermediate-css-picasso/index.html
@@ -10,16 +10,17 @@
 
 <body>
     <div id="back-wall"></div>
+    <!-- _______________________________________ -->
     <div class="characters">
+        <!-- ___________________________________ -->
         <div id="offwhite-character">
-
             <div id="white-hat"></div>
-            
+
             <div id="black-mask">
                 <div class="eyes left"></div>
                 <div class="eyes right"></div>
             </div>
-            
+
             <div id="gray-instrument">
                 <div class="black-dot"></div>
                 <div class="black-dot"></div>
@@ -29,11 +30,9 @@
             </div>
 
             <div id="tan-table"></div>
-
         </div>
-
+        <!-- __________________________________________ -->
         <div id="black-character">
-
             <div id="black-hat"></div>
 
             <div id="gray-mask">
@@ -47,8 +46,65 @@
                 <i class="fas fa-music"></i>
                 <i class="fas fa-music"></i>
             </div>
+        </div>
+        <!-- shawl -->
+        <div class="blue" id="blue-left"></div>
+        <div class="blue" id="blue-right"></div>
+        <!-- __________________________________________ -->
+        <div id="orange-character">
+            <div id="black-round-hat"></div>
+
+            <div id="eyes-div"></div>
+            <div class="eyes left">
+            </div>
+            <div class="eyes right"></div>
+
+            <div id="triangles">
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+                <div class="triangle"></div>
+            </div>
+
+            <div id="guitar">
+                <div class="guitar" id="guitar-left">
+                    <i class="fas fa-bars"></i> </div>
+
+                <div class="guitar" id="guitar-right">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+                <div id="guitar-neck"></div>
+            </div>
 
         </div>
+
     </div>
 </body>
 
